syntax="proto3";

package proto;

option go_package = "github.com/go-related/portservice";

service PortService {
  rpc CreateOrUpdatePorts (stream PortRequest) returns (PortResponse);
}

message PortRequest {
  map<string, PortDetails> port_details = 1;
}

message PortDetails {
  string name = 1;
  string city = 2;
  string country = 3;
  repeated string alias = 4;
  repeated string regions = 5;
  repeated double coordinates = 6;
  string province = 7;
  string timezone = 8;
  repeated string unlocs = 9;
  string code = 10;
}



message PortResponse {
  // OK response indicating the operation was successful
  optional int64 failed_items_number=1;
  string message = 2;
}
